--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
         <div class="nav__img"><img src="https://signup.hulu.com/static/images/hulu-dark.svg"    alt=""/>
         </div>
         <div class="log__in">
-            <a href="" ><span>LOG IN</span></a>
+            <a href="login.html" ><span>LOG IN</span></a>
         </div>
     </nav>
     <div class="account">
