--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a2ee455db1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -24,7 +27,7 @@
             <div><img src="images/hulu-logo.svg" alt="" /></div>
             <div>
                 <a href="login.html" class="login"><span>LOG IN</span></a>
-                <div class="burga1"><a href="" class="burga">
+                <div class="burga1"><a href="login.html" class="burga">
                         <img width="30px" height="20px" src="images/handburger_2.svg" alt="">
                     </a></div>
 
@@ -308,63 +311,6 @@
         </div>
     </section>
 
-    <!-- footer section -->
-    <!-- <footer>
-        <div class="fifth_section">
-            <div class="box17">
-                <div>
-                    <h3>BROWSE</h3>
-                    <a href=""><span>Streaming Library</span></a>
-                    <a href=""><span>Live TV</span></a>
-                    <a href=""><span>Live News</span></a>
-                    <a href=""><span>Live Sports</span></a>
-                </div>
-                <div>
-                    <br>
-                    <a href=""><span>TV Shows</span></a>
-                    <a href=""><span> Movies</span></a>
-                    <a href=""><span> Originals</span></a>
-                    <a href=""><span>Networks</span></a>
-                    <a href=""><span>Kids</span></a>
-                    <a href=""><span>FX</span></a>
-                </div>
-                <div>
-                    <br>
-                    <a href=""><span> max</span></a>
-                    <a href=""><span>cinemax</span></a>
-                    <a href=""> <span>showtime</span></a>
-                    <a href=""><span>STARZ</span></a>
-                </div>
-                <div>
-                    <br>
-                    <a href=""><span>Disney Bundle Trio Basic</span></a>
-                    <a href=""><span> Disney Bundle Trio Premium</span></a>
-                    <a href=""><span> Disney Bundle Duo Basic</span></a>
-                    <a href=""><span> Student Discount</span></a>
-                </div>
-                <div>
-                    <h3>HELP</h3>
-                    <a href=""><span> Account & Billing </span></a>
-                    <a href=""><span>Plans & Pricing</span></a>
-                    <a href=""><span>Supported Devices</span></a>
-                    <a href=""><span> Accessibility</span></a>
-                </div>
-
-                <div>
-                    <h3>ABOUT US</h3>
-                    <a href=""><span>Shop Hulu</span></a>
-                    <a href=""><span>Press</span></a>
-                    <a href=""><span>Jobs</span></a>
-                    <a href=""><span> Contact</span></a>
-                    <a href=""><span> Guides | What to Watch</span></a>
-                </div>
-            </div>
-        </div>
-    </footer> -->
-
-
-
-    <!--footer -->
     <footer>
         <div class="footer__links">
             <div class="footer__browse">
@@ -408,90 +354,93 @@
                     <li><a href=""> Accessibility</a> </li>
                 </ul>
                 <ul class="about">
-                    <h3>ABOUT US</h3>
-                    <li><a href="">Shop Hulu</a></li>
-                    <li><a href="">Press</a></li>
-                    <li><a href="">Jobs</a></li>
-                    <li><a href=""> Contact</a></li>
+                    <h3 title="About use">ABOUT US</h3>
+                    <li title="shop Hulu"><a href="">Shop Hulu</a></li>
+                    <li title="press"><a href="">Press</a></li>
+                    <li title="jobs"><a href="">Jobs</a></li>
+                    <li title="contact"><a href=""> Contact</a></li>
                     <li><a href=""> Guides | What to Watch</a></li>
                 </ul>
             </div>
         </div>
- <!-- Boostrapped Footer -->
- <div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          BROWSE
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            <ul>
-                <li><a href="">Streaming Library</a></li>
-                <li><a href="">Live TV</a></li>
-                <li><a href="">Live News</a></li>
-                <li><a href="">Live Sports</a></li>
-            </ul>
-            <ul>
-                <li><a href="">TV Shows</a></li>
-                <li><a href=""> Movies</a></li>
-                <li><a href=""> Originals</a></li>
-                <li><a href="">Networks</a></li>
-                <li><a href="">Kids</a></li>
-                <li><a href="">FX</a></li>
-            </ul>
-            <ul>
-                <li><a href=""> Max</a></li>
-                <li><a href=""> Cinemax</a></li>
-                <li><a href=""> Showtime</a></li>
-                <li><a href="">STARZ</a></li>
-            </ul>
-            <ul>
-                <li><a href="">Disney Bundle Trio Basic</a></li>
-                <li> <a href=""> Disney Bundle Trio Premium</a></li>
-                <li> <a href=""> Disney Bundle Duo Basic</a></li>
-                <li> <a href=""> Student Discount</a></li>
-            </ul>
+        <!-- Boostrapped Footer -->
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        BROWSE
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <ul>
+                            <li><a href="">Streaming Library</a></li>
+                            <li><a href="">Live TV</a></li>
+                            <li><a href="">Live News</a></li>
+                            <li><a href="">Live Sports</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="">TV Shows</a></li>
+                            <li><a href=""> Movies</a></li>
+                            <li><a href=""> Originals</a></li>
+                            <li><a href="">Networks</a></li>
+                            <li><a href="">Kids</a></li>
+                            <li><a href="">FX</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href=""> Max</a></li>
+                            <li><a href=""> Cinemax</a></li>
+                            <li><a href=""> Showtime</a></li>
+                            <li><a href="">STARZ</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="">Disney Bundle Trio Basic</a></li>
+                            <li> <a href=""> Disney Bundle Trio Premium</a></li>
+                            <li> <a href=""> Disney Bundle Duo Basic</a></li>
+                            <li> <a href=""> Student Discount</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        HELP
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <ul>
+                            <li><a href=""> Account & Billing </a></li>
+                            <li><a href="">Plans & Pricing</a></li>
+                            <li><a href="">Supported Devices</a></li>
+                            <li><a href=""> Accessibility</a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        ABOUT US
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <ul>
+                            <li><a href="">Shop Hulu</a></li>
+                            <li><a href="">Press</a></li>
+                            <li><a href="">Jobs</a></li>
+                            <li><a href=""> Contact</a></li>
+                            <li><a href=""> Guides | What to Watch</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          HELP
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            <ul>
-                <li><a href=""> Account & Billing </a></li>
-                <li><a href="">Plans & Pricing</a></li>
-                <li><a href="">Supported Devices</a></li>
-                <li><a href=""> Accessibility</a> </li>
-            </ul>
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          ABOUT US
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-            <ul>
-                <li><a href="">Shop Hulu</a></li>
-                <li><a href="">Press</a></li>
-                <li><a href="">Jobs</a></li>
-                <li><a href=""> Contact</a></li>
-                <li><a href=""> Guides | What to Watch</a></li>
-            </ul>
-        </div>
-      </div>
-    </div>
-  </div>
 
         <div class="footer__contacts">
             <div class="social__contact">
@@ -502,22 +451,22 @@
             </div>
             <div class="contact__links">
                 <ul>
-                  <li><a href="#">&copy;2023 Hulu,LLC</a></li>
-                  <li><a href="#" class="ads"> <img src="images/ads.png" alt="ads"><span> About Ads</span></a></li>
-                  <li><a href="#">Subscriber Agreement</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Do Not Sell or Share My Personal Information
-                </a></li>
-                  <li><a href="#">Your US State Privacy Rights</a></li>
-                  <li><a href="#">TV Parental Guidelines
-                </a></li>
-                  <li><a href="#">SiteMap</a></li>
+                    <li><a href="#">&copy;2023 Hulu,LLC</a></li>
+                    <li><a href="#" class="ads"> <img src="images/ads.png" alt="ads"><span> About Ads</span></a></li>
+                    <li><a href="#">Subscriber Agreement</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Do Not Sell or Share My Personal Information
+                        </a></li>
+                    <li><a href="#">Your US State Privacy Rights</a></li>
+                    <li><a href="#">TV Parental Guidelines
+                        </a></li>
+                    <li><a href="#">SiteMap</a></li>
                 </ul>
             </div>
         </div>
 
     </footer>
-   
+
 </body>
 
 </html>
